--- a/systems/CSE351/README
+++ b/systems/CSE351/README
@@ -1,2 +1,2 @@
-# course website
-https://courses.cs.washington.edu/courses/cse351/19sp/#
+# CSE 351: The Hardware/Software Interface
+[Spring 2019](https://courses.cs.washington.edu/courses/cse351/19sp/#)
